# qr_bill

./: .gitignore  README.md  pyproject.toml
src/bill/: bill.py
src/letter/: letter.py
src/ui/: home.py  style.py
src/utils/: checksum.py  company_address.py  temp_file.py
