[tool.poetry]
name = "qr_bill"
version = "0.0.1"
description = "Create qr bills"
package-mode = false
authors = []

# Requirements
[tool.poetry.dependencies]
python = "^3.13"
qrbill = "*"
reportlab = "*"
svglib = "^1.5.1"
jupyter = "^1.1.1"
pydantic = "^2.10.1"
pandas = "^2.2.3"
streamlit = "^1.40.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
jupyter = "*"

[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
]

