[project]
name = "qr_bill"
version = "0.0.1"
description = "Create qr bills"
requires-python = ">=3.13"
dependencies = [
    "qrbill",
    "reportlab",
    "svglib",
    "jupyter",
    "pydantic",
    "pandas",
    "streamlit",
]

[project.optional-dependencies]
test = [
    "pytest",
    "jupyter",
]

[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
]

